[package]
name = "cocox"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"
repository = "https://github.com/opensource-nepal/cocox"
homepage = "https://github.com/opensource-nepal/cocox"
documentation = "https://github.com/opensource-nepal/cocox"

[[bin]]
name = "cocox"
path = "src/main.rs"

[dependencies]
regex = "1"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
